# cse158-assignment2-music-genre-predicting

./: README.md  pyproject.toml
cse158_assignment2_music_genre_predicting/: model-design-and-evaluation-(tyler).ipynb  model-design-and-evaluation.ipynb  predictive-task-and-evolution-framework.ipynb
