[tool.poetry]
name = "cse158-assignment2-music-genre-predicting"
version = "0.1.0"
description = ""
authors = ["TylerFlar <tflar@ucsd.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
imblearn = "^0.0"
xgboost = "^2.1.3"
catboost = "^1.2.7"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
